Python/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> BEGIN program1 TECKA
Rule 2     program1 -> prikaz program2
Rule 3     program2 -> STREDNIK program3
Rule 4     program2 -> END
Rule 5     program3 -> END
Rule 6     program3 -> prikaz program2
Rule 7     prikaz -> promenna PRIRAZENI vyraz
Rule 8     prikaz -> BEGIN program1
Rule 9     prikaz -> IF vyraz THEN prikaz
Rule 10    prikaz -> IF vyraz THEN prikaz ELSE prikaz
Rule 11    prikaz -> FOR promenna PRIRAZENI vyraz for vyraz DO prikaz
Rule 12    for -> TO
Rule 13    for -> DOWNTO
Rule 14    prikaz -> WHILE vyraz DO prikaz
Rule 15    prikaz -> REPEAT prikazy UNTIL vyraz
Rule 16    prikaz -> error STREDNIK
Rule 17    prikazy -> prikaz STREDNIK prikazy1
Rule 18    prikazy1 -> prikaz STREDNIK prikazy1
Rule 19    prikazy1 -> <empty>
Rule 20    prikaz -> WRITELN
Rule 21    prikaz -> write LPAR retez RPAR
Rule 22    write -> WRITE
Rule 23    write -> WRITELN
Rule 24    retez -> RETEZ
Rule 25    prikaz -> write LPAR write2 write3 RPAR
Rule 26    write2 -> vyraz
Rule 27    write2 -> CHR LPAR vyraz RPAR
Rule 28    write2 -> HEX LPAR vyraz RPAR
Rule 29    write2 -> BIN LPAR vyraz RPAR
Rule 30    write3 -> DVOJTECKA cislo
Rule 31    write3 -> <empty>
Rule 32    prikaz -> READ LPAR promenna RPAR
Rule 33    vyraz -> NOT vyraz
Rule 34    vyraz -> BIT_NEG vyraz
Rule 35    vyraz -> PLUS vyraz
Rule 36    vyraz -> MINUS vyraz
Rule 37    vyraz -> LPAR vyraz RPAR
Rule 38    vyraz -> TRUE
Rule 39    vyraz -> FALSE
Rule 40    vyraz -> vyraz TIMES vyraz
Rule 41    vyraz -> vyraz DIVIDE vyraz
Rule 42    vyraz -> vyraz MOD vyraz
Rule 43    vyraz -> vyraz AND vyraz
Rule 44    vyraz -> vyraz BIT_AND vyraz
Rule 45    vyraz -> vyraz SHL vyraz
Rule 46    vyraz -> vyraz SHR vyraz
Rule 47    vyraz -> vyraz PLUS vyraz
Rule 48    vyraz -> vyraz MINUS vyraz
Rule 49    vyraz -> vyraz OR vyraz
Rule 50    vyraz -> vyraz XOR vyraz
Rule 51    vyraz -> vyraz BIT_OR vyraz
Rule 52    vyraz -> vyraz BIT_XOR vyraz
Rule 53    vyraz -> vyraz MENSI vyraz
Rule 54    vyraz -> vyraz VETSI vyraz
Rule 55    vyraz -> vyraz MENSIROVNO vyraz
Rule 56    vyraz -> vyraz VETSIROVNO vyraz
Rule 57    vyraz -> vyraz POROVNANI vyraz
Rule 58    vyraz -> vyraz NENIROVNO vyraz
Rule 59    vyraz -> ORD LPAR retez RPAR
Rule 60    vyraz -> promenna
Rule 61    vyraz -> cislo
Rule 62    cislo -> CISLO
Rule 63    promenna -> PROMENNA

Terminals, with rules where they appear

AND                  : 43
BEGIN                : 1 8
BIN                  : 29
BIT_AND              : 44
BIT_NEG              : 34
BIT_OR               : 51
BIT_XOR              : 52
CHR                  : 27
CISLO                : 62
DIVIDE               : 41
DO                   : 11 14
DOWNTO               : 13
DVOJTECKA            : 30
ELSE                 : 10
END                  : 4 5
FALSE                : 39
FOR                  : 11
HEX                  : 28
IF                   : 9 10
LPAR                 : 21 25 27 28 29 32 37 59
MENSI                : 53
MENSIROVNO           : 55
MINUS                : 36 48
MOD                  : 42
NENIROVNO            : 58
NOT                  : 33
OR                   : 49
ORD                  : 59
PLUS                 : 35 47
POROVNANI            : 57
PRIRAZENI            : 7 11
PROMENNA             : 63
READ                 : 32
REPEAT               : 15
RETEZ                : 24
RPAR                 : 21 25 27 28 29 32 37 59
SHL                  : 45
SHR                  : 46
STREDNIK             : 3 16 17 18
TECKA                : 1
THEN                 : 9 10
TIMES                : 40
TO                   : 12
TRUE                 : 38
UNTIL                : 15
VETSI                : 54
VETSIROVNO           : 56
WHILE                : 14
WRITE                : 22
WRITELN              : 20 23
XOR                  : 50
error                : 16

Nonterminals, with rules where they appear

cislo                : 30 61
for                  : 11
prikaz               : 2 6 9 10 10 11 14 17 18
prikazy              : 15
prikazy1             : 17 18
program              : 0
program1             : 1 8
program2             : 2 6
program3             : 3
promenna             : 7 11 32 60
retez                : 21 59
vyraz                : 7 9 10 11 11 14 15 26 27 28 29 33 34 35 36 37 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58
write                : 21 25
write2               : 25
write3               : 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . BEGIN program1 TECKA

    BEGIN           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> BEGIN . program1 TECKA
    (2) program1 -> . prikaz program2
    (7) prikaz -> . promenna PRIRAZENI vyraz
    (8) prikaz -> . BEGIN program1
    (9) prikaz -> . IF vyraz THEN prikaz
    (10) prikaz -> . IF vyraz THEN prikaz ELSE prikaz
    (11) prikaz -> . FOR promenna PRIRAZENI vyraz for vyraz DO prikaz
    (14) prikaz -> . WHILE vyraz DO prikaz
    (15) prikaz -> . REPEAT prikazy UNTIL vyraz
    (16) prikaz -> . error STREDNIK
    (20) prikaz -> . WRITELN
    (21) prikaz -> . write LPAR retez RPAR
    (25) prikaz -> . write LPAR write2 write3 RPAR
    (32) prikaz -> . READ LPAR promenna RPAR
    (63) promenna -> . PROMENNA
    (22) write -> . WRITE
    (23) write -> . WRITELN

    BEGIN           shift and go to state 3
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    REPEAT          shift and go to state 10
    error           shift and go to state 11
    WRITELN         shift and go to state 12
    READ            shift and go to state 14
    PROMENNA        shift and go to state 15
    WRITE           shift and go to state 16

    program1                       shift and go to state 4
    prikaz                         shift and go to state 5
    promenna                       shift and go to state 6
    write                          shift and go to state 13

state 3

    (8) prikaz -> BEGIN . program1
    (2) program1 -> . prikaz program2
    (7) prikaz -> . promenna PRIRAZENI vyraz
    (8) prikaz -> . BEGIN program1
    (9) prikaz -> . IF vyraz THEN prikaz
    (10) prikaz -> . IF vyraz THEN prikaz ELSE prikaz
    (11) prikaz -> . FOR promenna PRIRAZENI vyraz for vyraz DO prikaz
    (14) prikaz -> . WHILE vyraz DO prikaz
    (15) prikaz -> . REPEAT prikazy UNTIL vyraz
    (16) prikaz -> . error STREDNIK
    (20) prikaz -> . WRITELN
    (21) prikaz -> . write LPAR retez RPAR
    (25) prikaz -> . write LPAR write2 write3 RPAR
    (32) prikaz -> . READ LPAR promenna RPAR
    (63) promenna -> . PROMENNA
    (22) write -> . WRITE
    (23) write -> . WRITELN

    BEGIN           shift and go to state 3
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    REPEAT          shift and go to state 10
    error           shift and go to state 11
    WRITELN         shift and go to state 12
    READ            shift and go to state 14
    PROMENNA        shift and go to state 15
    WRITE           shift and go to state 16

    program1                       shift and go to state 17
    prikaz                         shift and go to state 5
    promenna                       shift and go to state 6
    write                          shift and go to state 13

state 4

    (1) program -> BEGIN program1 . TECKA

    TECKA           shift and go to state 18


state 5

    (2) program1 -> prikaz . program2
    (3) program2 -> . STREDNIK program3
    (4) program2 -> . END

    STREDNIK        shift and go to state 20
    END             shift and go to state 21

    program2                       shift and go to state 19

state 6

    (7) prikaz -> promenna . PRIRAZENI vyraz

    PRIRAZENI       shift and go to state 22


state 7

    (9) prikaz -> IF . vyraz THEN prikaz
    (10) prikaz -> IF . vyraz THEN prikaz ELSE prikaz
    (33) vyraz -> . NOT vyraz
    (34) vyraz -> . BIT_NEG vyraz
    (35) vyraz -> . PLUS vyraz
    (36) vyraz -> . MINUS vyraz
    (37) vyraz -> . LPAR vyraz RPAR
    (38) vyraz -> . TRUE
    (39) vyraz -> . FALSE
    (40) vyraz -> . vyraz TIMES vyraz
    (41) vyraz -> . vyraz DIVIDE vyraz
    (42) vyraz -> . vyraz MOD vyraz
    (43) vyraz -> . vyraz AND vyraz
    (44) vyraz -> . vyraz BIT_AND vyraz
    (45) vyraz -> . vyraz SHL vyraz
    (46) vyraz -> . vyraz SHR vyraz
    (47) vyraz -> . vyraz PLUS vyraz
    (48) vyraz -> . vyraz MINUS vyraz
    (49) vyraz -> . vyraz OR vyraz
    (50) vyraz -> . vyraz XOR vyraz
    (51) vyraz -> . vyraz BIT_OR vyraz
    (52) vyraz -> . vyraz BIT_XOR vyraz
    (53) vyraz -> . vyraz MENSI vyraz
    (54) vyraz -> . vyraz VETSI vyraz
    (55) vyraz -> . vyraz MENSIROVNO vyraz
    (56) vyraz -> . vyraz VETSIROVNO vyraz
    (57) vyraz -> . vyraz POROVNANI vyraz
    (58) vyraz -> . vyraz NENIROVNO vyraz
    (59) vyraz -> . ORD LPAR retez RPAR
    (60) vyraz -> . promenna
    (61) vyraz -> . cislo
    (63) promenna -> . PROMENNA
    (62) cislo -> . CISLO

    NOT             shift and go to state 24
    BIT_NEG         shift and go to state 25
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    LPAR            shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ORD             shift and go to state 31
    PROMENNA        shift and go to state 15
    CISLO           shift and go to state 34

    vyraz                          shift and go to state 23
    promenna                       shift and go to state 32
    cislo                          shift and go to state 33

state 8

    (11) prikaz -> FOR . promenna PRIRAZENI vyraz for vyraz DO prikaz
    (63) promenna -> . PROMENNA

    PROMENNA        shift and go to state 15

    promenna                       shift and go to state 35

state 9

    (14) prikaz -> WHILE . vyraz DO prikaz
    (33) vyraz -> . NOT vyraz
    (34) vyraz -> . BIT_NEG vyraz
    (35) vyraz -> . PLUS vyraz
    (36) vyraz -> . MINUS vyraz
    (37) vyraz -> . LPAR vyraz RPAR
    (38) vyraz -> . TRUE
    (39) vyraz -> . FALSE
    (40) vyraz -> . vyraz TIMES vyraz
    (41) vyraz -> . vyraz DIVIDE vyraz
    (42) vyraz -> . vyraz MOD vyraz
    (43) vyraz -> . vyraz AND vyraz
    (44) vyraz -> . vyraz BIT_AND vyraz
    (45) vyraz -> . vyraz SHL vyraz
    (46) vyraz -> . vyraz SHR vyraz
    (47) vyraz -> . vyraz PLUS vyraz
    (48) vyraz -> . vyraz MINUS vyraz
    (49) vyraz -> . vyraz OR vyraz
    (50) vyraz -> . vyraz XOR vyraz
    (51) vyraz -> . vyraz BIT_OR vyraz
    (52) vyraz -> . vyraz BIT_XOR vyraz
    (53) vyraz -> . vyraz MENSI vyraz
    (54) vyraz -> . vyraz VETSI vyraz
    (55) vyraz -> . vyraz MENSIROVNO vyraz
    (56) vyraz -> . vyraz VETSIROVNO vyraz
    (57) vyraz -> . vyraz POROVNANI vyraz
    (58) vyraz -> . vyraz NENIROVNO vyraz
    (59) vyraz -> . ORD LPAR retez RPAR
    (60) vyraz -> . promenna
    (61) vyraz -> . cislo
    (63) promenna -> . PROMENNA
    (62) cislo -> . CISLO

    NOT             shift and go to state 24
    BIT_NEG         shift and go to state 25
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    LPAR            shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ORD             shift and go to state 31
    PROMENNA        shift and go to state 15
    CISLO           shift and go to state 34

    vyraz                          shift and go to state 36
    promenna                       shift and go to state 32
    cislo                          shift and go to state 33

state 10

    (15) prikaz -> REPEAT . prikazy UNTIL vyraz
    (17) prikazy -> . prikaz STREDNIK prikazy1
    (7) prikaz -> . promenna PRIRAZENI vyraz
    (8) prikaz -> . BEGIN program1
    (9) prikaz -> . IF vyraz THEN prikaz
    (10) prikaz -> . IF vyraz THEN prikaz ELSE prikaz
    (11) prikaz -> . FOR promenna PRIRAZENI vyraz for vyraz DO prikaz
    (14) prikaz -> . WHILE vyraz DO prikaz
    (15) prikaz -> . REPEAT prikazy UNTIL vyraz
    (16) prikaz -> . error STREDNIK
    (20) prikaz -> . WRITELN
    (21) prikaz -> . write LPAR retez RPAR
    (25) prikaz -> . write LPAR write2 write3 RPAR
    (32) prikaz -> . READ LPAR promenna RPAR
    (63) promenna -> . PROMENNA
    (22) write -> . WRITE
    (23) write -> . WRITELN

    BEGIN           shift and go to state 3
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    REPEAT          shift and go to state 10
    error           shift and go to state 11
    WRITELN         shift and go to state 12
    READ            shift and go to state 14
    PROMENNA        shift and go to state 15
    WRITE           shift and go to state 16

    prikazy                        shift and go to state 37
    prikaz                         shift and go to state 38
    promenna                       shift and go to state 6
    write                          shift and go to state 13

state 11

    (16) prikaz -> error . STREDNIK

    STREDNIK        shift and go to state 39


state 12

    (20) prikaz -> WRITELN .
    (23) write -> WRITELN .

    STREDNIK        reduce using rule 20 (prikaz -> WRITELN .)
    END             reduce using rule 20 (prikaz -> WRITELN .)
    ELSE            reduce using rule 20 (prikaz -> WRITELN .)
    LPAR            reduce using rule 23 (write -> WRITELN .)


state 13

    (21) prikaz -> write . LPAR retez RPAR
    (25) prikaz -> write . LPAR write2 write3 RPAR

    LPAR            shift and go to state 40


state 14

    (32) prikaz -> READ . LPAR promenna RPAR

    LPAR            shift and go to state 41


state 15

    (63) promenna -> PROMENNA .

    PRIRAZENI       reduce using rule 63 (promenna -> PROMENNA .)
    THEN            reduce using rule 63 (promenna -> PROMENNA .)
    TIMES           reduce using rule 63 (promenna -> PROMENNA .)
    DIVIDE          reduce using rule 63 (promenna -> PROMENNA .)
    MOD             reduce using rule 63 (promenna -> PROMENNA .)
    AND             reduce using rule 63 (promenna -> PROMENNA .)
    BIT_AND         reduce using rule 63 (promenna -> PROMENNA .)
    SHL             reduce using rule 63 (promenna -> PROMENNA .)
    SHR             reduce using rule 63 (promenna -> PROMENNA .)
    PLUS            reduce using rule 63 (promenna -> PROMENNA .)
    MINUS           reduce using rule 63 (promenna -> PROMENNA .)
    OR              reduce using rule 63 (promenna -> PROMENNA .)
    XOR             reduce using rule 63 (promenna -> PROMENNA .)
    BIT_OR          reduce using rule 63 (promenna -> PROMENNA .)
    BIT_XOR         reduce using rule 63 (promenna -> PROMENNA .)
    MENSI           reduce using rule 63 (promenna -> PROMENNA .)
    VETSI           reduce using rule 63 (promenna -> PROMENNA .)
    MENSIROVNO      reduce using rule 63 (promenna -> PROMENNA .)
    VETSIROVNO      reduce using rule 63 (promenna -> PROMENNA .)
    POROVNANI       reduce using rule 63 (promenna -> PROMENNA .)
    NENIROVNO       reduce using rule 63 (promenna -> PROMENNA .)
    DO              reduce using rule 63 (promenna -> PROMENNA .)
    STREDNIK        reduce using rule 63 (promenna -> PROMENNA .)
    END             reduce using rule 63 (promenna -> PROMENNA .)
    ELSE            reduce using rule 63 (promenna -> PROMENNA .)
    RPAR            reduce using rule 63 (promenna -> PROMENNA .)
    DVOJTECKA       reduce using rule 63 (promenna -> PROMENNA .)
    TO              reduce using rule 63 (promenna -> PROMENNA .)
    DOWNTO          reduce using rule 63 (promenna -> PROMENNA .)


state 16

    (22) write -> WRITE .

    LPAR            reduce using rule 22 (write -> WRITE .)


state 17

    (8) prikaz -> BEGIN program1 .

    STREDNIK        reduce using rule 8 (prikaz -> BEGIN program1 .)
    END             reduce using rule 8 (prikaz -> BEGIN program1 .)
    ELSE            reduce using rule 8 (prikaz -> BEGIN program1 .)


state 18

    (1) program -> BEGIN program1 TECKA .

    $end            reduce using rule 1 (program -> BEGIN program1 TECKA .)


state 19

    (2) program1 -> prikaz program2 .

    TECKA           reduce using rule 2 (program1 -> prikaz program2 .)
    STREDNIK        reduce using rule 2 (program1 -> prikaz program2 .)
    END             reduce using rule 2 (program1 -> prikaz program2 .)
    ELSE            reduce using rule 2 (program1 -> prikaz program2 .)


state 20

    (3) program2 -> STREDNIK . program3
    (5) program3 -> . END
    (6) program3 -> . prikaz program2
    (7) prikaz -> . promenna PRIRAZENI vyraz
    (8) prikaz -> . BEGIN program1
    (9) prikaz -> . IF vyraz THEN prikaz
    (10) prikaz -> . IF vyraz THEN prikaz ELSE prikaz
    (11) prikaz -> . FOR promenna PRIRAZENI vyraz for vyraz DO prikaz
    (14) prikaz -> . WHILE vyraz DO prikaz
    (15) prikaz -> . REPEAT prikazy UNTIL vyraz
    (16) prikaz -> . error STREDNIK
    (20) prikaz -> . WRITELN
    (21) prikaz -> . write LPAR retez RPAR
    (25) prikaz -> . write LPAR write2 write3 RPAR
    (32) prikaz -> . READ LPAR promenna RPAR
    (63) promenna -> . PROMENNA
    (22) write -> . WRITE
    (23) write -> . WRITELN

    END             shift and go to state 43
    BEGIN           shift and go to state 3
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 9
    REPEAT          shift and go to state 10
    error           shift and go to state 11
    WRITELN         shift and go to state 12
    READ            shift and go to state 14
    PROMENNA        shift and go to state 15
    WRITE           shift and go to state 16

    program3                       shift and go to state 42
    prikaz                         shift and go to state 44
    promenna                       shift and go to state 6
    write                          shift and go to state 13

state 21

    (4) program2 -> END .

    TECKA           reduce using rule 4 (program2 -> END .)
    STREDNIK        reduce using rule 4 (program2 -> END .)
    END             reduce using rule 4 (program2 -> END .)
    ELSE            reduce using rule 4 (program2 -> END .)


state 22

    (7) prikaz -> promenna PRIRAZENI . vyraz
    (33) vyraz -> . NOT vyraz
    (34) vyraz -> . BIT_NEG vyraz
    (35) vyraz -> . PLUS vyraz
    (36) vyraz -> . MINUS vyraz
    (37) vyraz -> . LPAR vyraz RPAR
    (38) vyraz -> . TRUE
    (39) vyraz -> . FALSE
    (40) vyraz -> . vyraz TIMES vyraz
    (41) vyraz -> . vyraz DIVIDE vyraz
    (42) vyraz -> . vyraz MOD vyraz
    (43) vyraz -> . vyraz AND vyraz
    (44) vyraz -> . vyraz BIT_AND vyraz
    (45) vyraz -> . vyraz SHL vyraz
    (46) vyraz -> . vyraz SHR vyraz
    (47) vyraz -> . vyraz PLUS vyraz
    (48) vyraz -> . vyraz MINUS vyraz
    (49) vyraz -> . vyraz OR vyraz
    (50) vyraz -> . vyraz XOR vyraz
    (51) vyraz -> . vyraz BIT_OR vyraz
    (52) vyraz -> . vyraz BIT_XOR vyraz
    (53) vyraz -> . vyraz MENSI vyraz
    (54) vyraz -> . vyraz VETSI vyraz
    (55) vyraz -> . vyraz MENSIROVNO vyraz
    (56) vyraz -> . vyraz VETSIROVNO vyraz
    (57) vyraz -> . vyraz POROVNANI vyraz
    (58) vyraz -> . vyraz NENIROVNO vyraz
    (59) vyraz -> . ORD LPAR retez RPAR
    (60) vyraz -> . promenna
    (61) vyraz -> . cislo
    (63) promenna -> . PROMENNA
    (62) cislo -> . CISLO
